@@ -11,7 +11,7 @@ export(.TraceWithMethods)
 export(.untracedFunction)
 export(.doTracePrint)
 export(.valueClassTest)
-export("@<-")
+## export("@<-")
 export(Arith)
 export(Compare)
 export(Complex)
