@@ -1363,12 +1363,69 @@ SEXP attribute_hidden do_attr(SEXP call, SEXP op, SEXP args, SEXP env)
     return ans;
 }
 
+static void check_slot_name(SEXP obj, SEXP input) {
+	int isAttr = 0;
+	SEXP alist, name;
+
+	name = install(CHAR(STRING_ELT(input, 0)));
+	if(name == install(".Data") &&  TYPEOF(obj) != S4SXP)
+	    return;
+	   
+
+	/* Check for a valid slot name; must already have this attr if not .Data */
+	for (alist = ATTRIB(obj); alist != R_NilValue; alist = CDR(alist)) {
+	    SEXP tmp = TAG(alist);
+	    if (tmp == name) {
+		isAttr = 1;
+		break;
+	    }
+	}
+	if(!isAttr) {
+	    SEXP klass;
+	    klass = getAttrib(obj, R_ClassSymbol);
+	    error(_("\"%s\" is not a slot in object of class \"%s\""),
+		  translateChar(STRING_ELT(input, 0)),
+		    translateChar(STRING_ELT(klass, 0)));
+	}
+}
+
+
 SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     /*  attr(x, which = "<name>")  <-  value  */
     SEXP obj, name, ap, argList;
 
     checkArity(op, args);
+
+    if(PRIMVAL(op)) { /* @<- */
+	SEXP input, nlist, value, ans; int iS;
+	PROTECT(input = allocVector(STRSXP, 1));
+
+	nlist = CADR(args);
+	iS = isSymbol(nlist);
+	if (iS)
+	    SET_STRING_ELT(input, 0, PRINTNAME(nlist));
+	else if(isString(nlist) )
+	    SET_STRING_ELT(input, 0, STRING_ELT(nlist, 0));
+	else {
+	    error(_("invalid type '%s' for slot name"), type2char(TYPEOF(nlist)));
+	    return R_NilValue; /*-Wall*/
+	}
+
+	/* replace the second argument with a string */
+	SETCADR(args, input);
+
+ 	if(DispatchOrEval(call, op, "@<-", args, env, &ans, 0, 0))
+	    return(ans);
+
+	PROTECT(value = CADDR(ans));
+
+	PROTECT(obj = CAR(ans));
+	check_slot_name(obj, input);
+	UNPROTECT(3);
+	return R_do_slot_assign(obj, input, value);
+    }
+
 
     obj = CAR(args);
     if (NAMED(obj) == 2)
@@ -1591,7 +1648,7 @@ SEXP R_do_slot_assign(SEXP obj, SEXP name, SEXP value) {
     } else {
 	if(isNull(value))		/* Slots, but not attributes, can be NULL.*/
 	    value = pseudo_NULL;	/* Store a special symbol instead. */
-
+	    
 #ifdef _R_ver_le_2_11_x_
 	setAttrib(obj, name, value);
 #else
